testsuite/tests/properties/invalid_struct_update/test.out
== invalid_field/test.lkt ==
test.lkt:4:53: error: Invalid KV field: nosuchfield
4 |     @exported fun increment(kv: KV): KV = kv.update(nosuchfield=1)
  |                                                     ^^^^^^^^^^^^^


== invalid_type/test.lkt ==
test.lkt:4:57: error: Expected type String, got Symbol
4 |     @exported fun increment(kv: KV): KV = kv.update(key=s"hello")
  |                                                         ^^^^^^^^


== not_a_struct/test.lkt ==
test.lkt:4:48: error: Struct expected as the prefix, got Example
4 |     @exported fun increment(kv: KV): KV = node.update(value=kv)
  |                                                ^^^^^^


lkt_compile: Done
